===============
Stalker Changes
===============

0.2.9
=====

* **New:** Added a new class called ``Daily`` which will help managing
  ``Version`` outputs (Link instances including Versions itself) as a group.

* **New:** Added a new status list for ``Daily`` class which contains two
  statuses called "Open" and "Closed".

0.2.8.4
=======

* **Fix:** Fixed ``SimpleEntity._validate_name()`` method for unicode strings.

0.2.8.3
=======

* **Fix:** Fixed str/unicode errors due to the code written for Python3
  compatibility.

* **Update:** Removed ``Task.is_complete`` attribute. Use the status "CMPL"
  instead of this attribute.

0.2.8.2
=======

* **Fix:** Fixed ``stalker.db.create_alembic_table()`` again to prevent extra
  row insertion.

0.2.8.1.1
=========

* **Fix:** Fixed ``stalker.db.create_alembic_table()`` function to handle the
  situation where the table is already created.

0.2.8.1
=======

* **Fix:** Fixed ``stalker.db.create_alembic_table()`` function, it is not
  using the ``alembic`` library anymore to create the ``alembic_version``
  table, which was the proper way of doing it but it created a lot of problems
  when Stalker is installed as a package.

0.2.8
=====

* **Update:** Stalker is now Python3 compatible.

* **New:** Added a new class called ``Client`` which can be used to track down
  information about the clients of ``Projects``. Also added ``Project.client``
  and ``User.company`` attributes which are referencing a Client instance
  allowing to add clients as normal users.

* **New:** ``db.init()`` now creates ``alembic_version`` table and stamps the
  most recent version number to that table allowing newly initialized databases
  to be considered in head revision.

* **Fix:** Fixed ``Version._format_take_name()`` method. It is now possible to
  use multiple underscore characters in ``Version.take_name`` attribute.

0.2.7.6
=======

* **Update:** Removed ``TimeLog._expand_task_schedule_timing()`` method which